--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
 		<link rel="stylesheet" type="text/css" href="/assets/css/navbar.css" />
 	</head>
 	<body>
-	   <svg class="navbar" width="350" height="350" viewBox="0 0 350 350" fill="none" xml="http://www.w3.org/2000/svg">
-            <rect width="350" height="350" fill="#1E1E1E"/>
-            <rect width="350" height="350" fill="white"/>
-            <rect x="35" y="35" width="280" height="280" rx="40" fill="#D9D9D9"/>
-            <rect x="62" y="161" width="226" height="28" rx="14" fill="#1B1F75"/>
-            <rect x="62" y="238" width="226" height="28" rx="14" fill="#1B1F75"/>
-            <rect x="62" y="84" width="226" height="28" rx="14" fill="#1B1F75"/>
-	    </svg>
-		<p>Welcome to my website!<p>
+		<p>Hello.  My website is under construction.<p>
 	</body>
 </html>
