--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 	<body>
 		<svg width="100%" height="352" viewBox="0 0 8137 352" fill="none" xmlns="http://www.w3.org/2000/svg">
 			<rect width="100%" height="352" fill="#1E1E1E"/>
-			<rect width="100%" height="352" fill="slategray"/>
-			<rect x="35" y="36" width="280" height="280" rx="40" fill="#D9D9D9"/>
+			<rect width="100%" height="352" fill="#1d1d1f"/>
+			<rect x="35" y="36" width="280" height="280" rx="40" fill="#1B1F75"/>
 			<rect id="glow-container" x="28" y="28" height="294" rx="45"/>
-			<rect id="about" x="483" y="68" width="2423" height="217" rx="40" fill="#D9D9D9"/>
-			<rect id="projects" x="3006" y="68" width="2423" height="217" rx="40" fill="#D9D9D9"/>
-			<rect id="links" x="5529" y="68" width="2423" height="217" rx="40" fill="#D9D9D9"/>
-            <rect id="nav-button" onclick="navbarClick()" x="35" y="35" width="280" height="280" rx="40" fill="#D9D9D9"/>
-            <rect x="62" y="161" width="226" height="28" rx="14" fill="#1B1F75"/>
-            <rect x="62" y="238" width="226" height="28" rx="14" fill="#1B1F75"/>
-            <rect x="62" y="84" width="226" height="28" rx="14" fill="#1B1F75"/>
+			<rect id="about" x="483" y="68" width="2423" height="217" rx="40" fill="#1B1F75"/>
+			<rect id="projects" x="3006" y="68" width="2423" height="217" rx="40" fill="#1B1F75"/>
+			<rect id="links" x="5529" y="68" width="2423" height="217" rx="40" fill="#1B1F75"/>
+            <rect id="nav-button" onclick="navbarClick()" x="35" y="35" width="280" height="280" rx="40" fill="#1B1F75"/>
+            <rect x="62" y="161" width="226" height="28" rx="14" fill="#D9D9D9"/>
+            <rect x="62" y="238" width="226" height="28" rx="14" fill="#D9D9D9"/>
+            <rect x="62" y="84" width="226" height="28" rx="14" fill="#D9D9D9"/>
 	    </svg>
 	</body>
 </html>
