--- a/index.html
+++ b/index.html
@@ -21,5 +21,45 @@
             <rect x="62" y="238" width="226" height="28" rx="14" fill="#D9D9D9"/>
             <rect x="62" y="84" width="226" height="28" rx="14" fill="#D9D9D9"/>
 	    </svg>
+		<h1>
+			Kerick Walker
+		</h1>
+		<h1>
+			About
+		</h1>
+		<p>
+			Hello, welcome to my portfolio website.  I'm a computer science student at Pomona college,
+			and enjoy working with machine learning/neural networks and electronics.
+		</p>
+		<h1>
+			Projects
+		</h1>
+		<p>
+			Here are a couple of my recent side projects.  Click here to see a complete index of all projects I've worked on
+		</p>
+		<p>
+			Bat Clasifier
+		</p>
+		<p>
+			Code names with word to vec
+		</p>
+		<p>
+			LEDs with Arduino UNO
+		</p>
+		<h2>
+			Links
+		</h2>
+		<p>
+			Github
+		</p>
+		<p>
+			Linkedin
+		</p>
+		<p>
+			Resume
+		</p>
+		<p>
+			More Projects
+		</p>
 	</body>
 </html>
