add text formatting

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			Projects
 		</h1>
 		<p>
-			Here are a couple of my recent side projects.  Click here to see a complete index of all projects I've worked on
+			Here are a couple of my recent projects.  Click here to see a complete index of all projects I've worked on
 		</p>
 		<p>
 			Bat Clasifier
@@ -43,9 +43,9 @@
 		<p>
 			LEDs with Arduino UNO
 		</p>
-		<h2>
+		<h1>
 			Links
-		</h2>
+		</h1>
 		<p>
 			Github
 		</p>
