--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Kerick Walker</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-		<link rel="stylesheet" type="text/css" href="assets/css/navbar.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/styles.css"/>
 		<script src="assets/javascript/animations.js"></script> 
 	</head>
 	<body>
@@ -18,19 +18,17 @@
 			<div class="bar" id="middle" top="5px"></div>
 			<div class="bar" id="bottom" top="10px"></div>
 		</div>
-		<h1>
-			Kerick Walker
-		</h1>
-		<h1>
-			About
-		</h1>
+		<div id="masthead">
+			<h1 id="name">Kerick Walker</h1>
+			<img id="profile-pic" src="./assets/images/IMG_1472.jpeg">
+			<p id="subname">Computer Science and Math<br>Pomona College<br>Phillips Exeter Academy</p>
+		</div>
+		<!-- <h1>About</h1>
 		<p>
 			Hello, welcome to my portfolio website.  I'm a computer science student at Pomona college,
 			and enjoy working with machine learning/neural networks and electronics.
 		</p>
-		<h1>
-			Projects
-		</h1>
+		<h1>Projects</h1>
 		<p>
 			Here are a couple of my recent projects.  Click here to see a complete index of all projects I've worked on
 		</p>
@@ -43,9 +41,7 @@
 		<p>
 			LEDs with Arduino UNO
 		</p>
-		<h1>
-			Links
-		</h1>
+		<h1>Links</h1>
 		<p>
 			Github
 		</p>
@@ -57,6 +53,6 @@
 		</p>
 		<p>
 			More Projects
-		</p>
+		</p> -->
 	</body>
 </html>
