add styling for about, projects, and links divs

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	</head>
 	<body>
 		<div id="glow-container">
-			<div class="navtab" id="about">About</div>
-			<div class="navtab" id="projects">Projects</div>
-			<div class="navtab" id="links">Links</div>
+			<div class="navtab" id="about-tab">About</div>
+			<div class="navtab" id="projects-tab">Projects</div>
+			<div class="navtab" id="links-tab">Links</div>
 		</div>
 		<div id="nav-button" onclick="navbarClick()">
 			<div class="bar" id="top" top="0px"></div>
@@ -23,36 +23,39 @@
 			<img id="profile-pic" src="./assets/images/IMG_1472.jpeg">
 			<p id="subname">Computer Science and Math<br>Pomona College<br>Phillips Exeter Academy</p>
 		</div>
-		<!-- <h1>About</h1>
-		<p>
-			Hello, welcome to my portfolio website.  I'm a computer science student at Pomona college,
-			and enjoy working with machine learning/neural networks and electronics.
-		</p>
-		<h1>Projects</h1>
-		<p>
-			Here are a couple of my recent projects.  Click here to see a complete index of all projects I've worked on
-		</p>
-		<p>
-			Bat Clasifier
-		</p>
-		<p>
-			Code names with word to vec
-		</p>
-		<p>
-			LEDs with Arduino UNO
-		</p>
-		<h1>Links</h1>
-		<p>
-			Github
-		</p>
-		<p>
-			Linkedin
-		</p>
-		<p>
-			Resume
-		</p>
-		<p>
-			More Projects
-		</p> -->
+		<div id="about">
+			<h1>About</h1>
+			<p>
+				Hello, welcome to my portfolio website.  I'm a computer science student at Pomona college,
+				and enjoy working with machine learning/neural networks and electronics.
+			</p>
+		</div>
+		<div id="projects">
+			<h1>Projects</h1>
+			<p>
+				Here are a couple of my recent projects.  Click here to see a complete index of all projects I've worked on
+			</p>
+			<p>
+				Bat Clasifier
+			</p>
+			<p>
+				Code names with word to vec
+			</p>
+			<p>
+				LEDs with Arduino UNO
+			</p>
+		</div>
+		<div id="links">
+			<h1>Links</h1>
+			<p>
+				Github
+			</p>
+			<p>
+				Linkedin
+			</p>
+			<p>
+				Resume
+			</p>
+		</div>
 	</body>
 </html>
