add home tab to navbar

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 		</div>
 		<div id="padding"></div>
 		<div id="glow-container">
+			<div class="navtab" id="home-tab" onclick="homeScroll()">Home</div>
 			<div class="navtab" id="about-tab" onclick="aboutScroll()">About</div>
 			<div class="navtab" id="projects-tab" onclick="projectsScroll()">Projects</div>
 			<div class="navtab" id="links-tab" onclick="linksScroll()">Links</div>
