add segments to projects div

--- a/index.html
+++ b/index.html
@@ -22,19 +22,8 @@
 			</p>
 		</div>
 		<div id="projects">
-			<h1>Projects</h1>
-			<p>
-				Here are a couple of my recent projects.  Click here to see a complete index of all projects I've worked on
-			</p>
-			<p>
-				Bat Clasifier
-			</p>
-			<p>
-				Code names with word to vec
-			</p>
-			<p>
-				LEDs with Arduino UNO
-			</p>
+			<h2 id="featured-project">Featured Project: Bat Echolocation Classification</h2>
+			<h2 id="other-projects">Other Projects</h2>
 		</div>
 		<div id="links">
 			<h1>Links</h1>
